add: get notes endpoint
